package com.metasoft.veyra.platform.iam.application.acl.services;

import com.metasoft.veyra.platform.iam.application.internal.outboundservices.hashing.HashingService;
import com.metasoft.veyra.platform.iam.domain.model.commands.CreateRelativeAccountCommand;
import com.metasoft.veyra.platform.iam.domain.model.commands.SignUpCommand;
import com.metasoft.veyra.platform.iam.domain.model.entities.Role;
import com.metasoft.veyra.platform.iam.domain.model.queries.GetUserByIdQuery;
import com.metasoft.veyra.platform.iam.domain.model.queries.GetUserByUsernameQuery;
import com.metasoft.veyra.platform.iam.domain.services.UserCommandService;
import com.metasoft.veyra.platform.iam.domain.services.UserQueryService;
import com.metasoft.veyra.platform.iam.infrastructure.persistence.jpa.repositories.UserRepository;
import com.metasoft.veyra.platform.iam.interfaces.acl.IamContextFacade;
import org.apache.logging.log4j.util.Strings;
import org.springframework.stereotype.Service;

import java.util.ArrayList;
import java.util.List;

/**
 * IamContextFacade
 * <p>
 *     This class is a facade for the IAM context. It provides a simple interface for other bounded contexts to interact with the
 *     IAM context.
 *     This class is a part of the ACL layer.
 * </p>
 *
 */
@Service
public class IamContextFacadeImpl implements IamContextFacade {
    private final UserCommandService userCommandService;
    private final UserQueryService userQueryService;
    /**
     * Constructor for IamContextFacadeImpl.
     * @param userCommandService the user command service
     * @param userQueryService the user query service
     */
    public IamContextFacadeImpl(UserCommandService userCommandService, UserQueryService userQueryService, UserRepository userRepository, HashingService hashingService) {
        this.userCommandService = userCommandService;
        this.userQueryService = userQueryService;
    }

    /**
     * Creates a user with the given username and password.
     * @param username The username of the user.
     * @param password The password of the user.
     * @return The id of the created user.
     */
    @Override
    public Long createUser(String username, String password) {
        var signUpCommand = new SignUpCommand(username, password, List.of(Role.getDefaultRole()));
        var result = userCommandService.handle(signUpCommand);
        if (result.isEmpty()) return 0L;
        return result.get().getId();
    }

    /**
     * Creates a user with the given username, password and roles.
     * @param username The username of the user.
     * @param password The password of the user.
     * @param roleNames The names of the roles of the user. When a role does not exist, it is ignored.
     * @return The id of the created user.
     */
    @Override
    public Long createUser(String username, String password, List<String> roleNames) {
        var roles = roleNames != null ? roleNames.stream().map(Role::toRoleFromName).toList() : new ArrayList<Role>();
        var signUpCommand = new SignUpCommand(username, password, roles);
        var result = userCommandService.handle(signUpCommand);
        if (result.isEmpty()) return 0L;
        return result.get().getId();
    }

    /**
     * Fetches the id of the user with the given username.
     * @param username The username of the user.
     * @return The id of the user.
     */
    @Override
    public Long fetchUserIdByUsername(String username) {
        var getUserByUsernameQuery = new GetUserByUsernameQuery(username);
        var result = userQueryService.handle(getUserByUsernameQuery);
        if (result.isEmpty()) return 0L;
        return result.get().getId();
    }

    /**
     * Fetches the username of the user with the given id.
     * @param userId The id of the user.
     * @return The username of the user.
     */
    @Override
    public String fetchUsernameByUserId(Long userId) {
        var getUserByIdQuery = new GetUserByIdQuery(userId);
        var result = userQueryService.handle(getUserByIdQuery);
        if (result.isEmpty()) return Strings.EMPTY;
        return result.get().getUsername();
    }

    @Override
    public boolean existsUserById(Long userId) {
        try {
            var query = new GetUserByIdQuery(userId);
            var user = userQueryService.handle(query);
            return user.isPresent();
        } catch (Exception e) {
            return false;
        }
    }

    @Override
    public String createRelativeAccount(String email) {
        return userCommandService.handle(new CreateRelativeAccountCommand(email));

    }

}
