@startuml
' Bounded Context: iam
' Compact view: aggregates, services, repositories, controllers.
' Individual commands/queries/resources/assemblers are omitted for readability.

left to right direction
skinparam linetype ortho
skinparam nodesep 30
skinparam ranksep 50
skinparam shadowing false
skinparam packageStyle rectangle
skinparam class {
  BackgroundColor White
  ArrowColor #444444
  BorderColor #333333
}

package "domain.model.aggregates" {
  class User {
    +UserId id
    +Username username
    +Email email
    +List<Role> roles
    +PasswordHash passwordHash
  }
}

package "domain.model.entities" {
  class Role {
    +RoleId id
    +String name
  }
}

package "domain.services" {
  interface UserCommandService
  interface UserQueryService
  interface RoleCommandService
  interface RoleQueryService
}

package "application (command/query services)" {
  class UserCommandServiceImpl
  class UserQueryServiceImpl
  class RoleCommandServiceImpl
  class RoleQueryServiceImpl
}

package "infrastructure.persistence.jpa.repositories" {
  interface UserRepository
  interface RoleRepository
}

package "infrastructure.hashing / tokens" {
  interface HashingService
  interface TokenService
}

package "application.acl.services / interfaces.acl" {
  interface IamContextFacade
  class IamContextFacadeImpl
}

package "interfaces.rest" {
  class AuthenticationController
  class UsersController
  class RolesController
}

' Relationships
User *-- Role : "has 0..*"

UserRepository --> User
RoleRepository --> Role

UserCommandService <|.. UserCommandServiceImpl
UserQueryService <|.. UserQueryServiceImpl
RoleCommandService <|.. RoleCommandServiceImpl
RoleQueryService <|.. RoleQueryServiceImpl

UserCommandServiceImpl --> UserRepository
UserQueryServiceImpl --> UserRepository
RoleCommandServiceImpl --> RoleRepository
RoleQueryServiceImpl --> RoleRepository

UserCommandServiceImpl --> HashingService
UserCommandServiceImpl --> TokenService
UserQueryServiceImpl --> TokenService

AuthenticationController --> UserCommandService
AuthenticationController --> UserQueryService
UsersController --> UserCommandService
UsersController --> UserQueryService
RolesController --> RoleCommandService
RolesController --> RoleQueryService

IamContextFacadeImpl ..|> IamContextFacade
IamContextFacadeImpl --> UserCommandService
IamContextFacadeImpl --> UserQueryService
IamContextFacadeImpl --> RoleCommandService
IamContextFacadeImpl --> RoleQueryService
IamContextFacadeImpl --> TokenService
IamContextFacadeImpl --> HashingService

@enduml